# gangs-of-ps

./: .flake8  .gitignore  .pre-commit-config.yaml  AI_INSTRUCTIONS.md  DB_SCALABILITY.md  DEPLOY.md  DEPLOY_PAW.md  README.md  admin_views.py  capture_gameplay.py  check_seo.py  concat_list.txt  config.py  decorators.py  download_images.py  extensions.py  factory.py  flake8_report.txt  generate_promo_v3.py  generate_promo_v4.py  generate_promo_v5.py  generate_voiceover.py  messages.pot  pyproject.toml  reproduce_error.py  requirements-dev.txt  requirements.txt  run-import-trace.txt  run.py  test_moviepy.py  test_room_workflows.py  test_smoke.py  translation_audit_report.json  update_crimes.py  update_db.py  validation_report.txt  wsgi.py
.blackboxcli/: PROJECT_SUMMARY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  qa.yml
admin/: views.py
data/seeds/: basic_crimes.json  daily_tasks.json  farm_products.json  gang_upgrades.json  hostess_knowledge.json  items.json  locations.json  materials.json  organized_crimes.json  vehicles.json
docs/: pythonanywhere_postgres.md
forms/: auth.py  developer.py  economy.py  forum.py  gameplay.py  payment.py
migrations/: README  alembic.ini  full_schema.sql
migrations/versions/: 0841f8533578_update_heisthistory_for_postgresql_json.py  0f6a0d9e5c11_add_farm_supply_contracts.py  14db83577c98_add_gang_chat_and_private_chat_tables.py  1a2d7d8b3c9f_add_user_security_and_chat_columns.py  1a3c9b7d2e10_add_facility_last_perk.py  2c1c9b9e5e10_ensure_user_jail_and_gym_tracking_columns.py  2f1c0a9c8d11_add_admin_protection_flag_to_user.py  36971c084fec_add_more_indexes_for_social_and_logs.py  380a7cb143ee_initial_comprehensive_schema.py  4b2d6c1e3f10_add_factory_jobs.py  5a4b3c2d1e0f_add_gender_birthdate.py  6b5c4d3e2f1g_add_chat_rooms_and_last_seen.py  6d5e0c93a4b1_add_daily_tasks_tables.py  7b8d9e0a1c23_add_heat_fields_to_user.py  7f8e9d0a1b2c_improve_chat_schema.py  8c2a9f1e0d77_add_farm_jobs.py  8c4f1a2b3d45_add_daily_streak_to_user.py  9124fe2bf48a_optimize_market_and_gameplay_indexes.py  a1b2c3d4e5f6_fix_system_config_value_type.py  a3c9f1b2d4e5_add_friendship_table.py  ad5bbcb68d30_check_pending_changes.py  b1c2d3e4f5a6_add_vip_until_column.py  b2c3d4e5f6g7_update_user_health_scaling.py  b3d4e5f6g7h8_add_daily_bullets_purchased.py  bfefe2677f46_add_knowledge_base_to_hostess_and_.py  c2e7a9b0a3c4_add_user_facilities.py  c6f3b2d9a1e4_add_jail_escape_tracking.py  c91f8a3d2b10_add_hostess_ai_memory_and_flags.py  (+7 more)
models/: __init__.py  achievement.py  bounty.py  casino_game.py  combat.py  contract.py  economy.py  entertainment.py  events.py  facility.py  factory.py  farm.py  forum.py  gameplay.py  hostess.py  item.py  knowledge.py  location.py  log.py  market.py  payment.py  racing.py  referral.py  resource_guard.py  social.py  system.py  user.py  vehicle.py
routes/: __init__.py  auth.py  bank.py  black_market.py  bounties.py  casino.py  chat_socket.py  combat.py  core.py  developer.py  economy.py  entertainment.py  entertainment_helpers.py  errors.py  factory.py  farm.py  forum.py  gameplay.py  gang.py  garage.py  graveyard.py  gym.py  hospital.py  inventory.py  jail.py  market.py  news.py  payment.py  police_chase.py  racing.py  resources.py  search.py  seo.py  social.py  staff.py  tarneeb_logic.py  travel.py  trend.py  trix_logic.py  utils.py  (+1 more)
scripts/: add_asset_maintenance.py  add_auction_refunded.py  add_gym_activity_column.py  add_login_lockout_columns.py  add_regen_columns.py  audit_assets.py  audit_data_integrity.py  audit_live_posts.py  audit_live_routes.py  audit_templates.py  audit_ui_links.py  check_endpoints.py  check_farm_items.py  check_integration.py  create_instance_backup.py  db_check.py  debug_item.py  deploy_paw.py  find_missing_translations.py  fix_all_translations_v2.py  fix_images.py  generate_assets.py  i18n_audit_templates.py  migrate_server.py  restore_db.py  seed_knowledge.py  start_game.py  temp_po.txt  test_debug.txt  update_css.py  update_db_avatar.py  update_db_intel.py  update_db_safely.py  update_db_schema.py  update_final_translations.py  update_hostess_ai_memory_schema.py  update_hostess_data.py  update_hostess_schema_v2.py  update_jasmin_public.py  update_po_common_terms.py  (+8 more)
services/: ai_hostess_service.py  budget_service.py  chat_realtime.py  chat_security.py  economy.py  economy_academy.py  economy_integrity.py  economy_policy.py  empire_service.py  gang_service.py  greeter_service.py  hostess_training_service.py  market_education.py  market_simulation.py  market_trading.py  requirements.py  resource_service.py  revenue_service.py  season_service.py  staff_access.py  stripe_service.py  vip_service.py  world_event_service.py
static/: manifest.json  sw.js
static/css/: custom.css  (+10 more)
templates/: bank.html  base.html  black_market.html  blackjack.html  bounties.html  buy_diamonds.html  crimes.html  daily_tasks.html  dealership.html  edit_profile.html  empire.html  factory.html  farm.html  fight.html  garage.html  graveyard.html  guide.html  gym.html  hara.html  heist_history.html  heist_report.html  hospital.html  index.html  intel_center.html  intel_report.html  inventory.html  invite_friends.html  jail.html  leaderboard.html  lobby.html  login.html  market.html  messages.html  my_properties.html  news.html  news_detail.html  notifications.html  organized_crimes.html  police_chase.html  profile.html  (+10 more)
tests/: conftest.py  test_smoke.py
tools/: check_dev_heat.py  check_organized_crimes.py
translations/: messages.pot
utils/: backup_manager.py  decorators.py  essentials.py  resource_audit.py  seo.py  trix_ai.py
(+206 files in other folders)
