[project]
name = "gangs-of-palestine"
version = "1.0.0"
description = "Mafia-style multiplayer web game (Gangs of Palestine engine)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0,<3.2",
    "Flask-SQLAlchemy>=3.1.1,<3.2",
    "Flask-Migrate>=4.1.0,<5",
    "psycopg2-binary>=2.9.10,<3",
    "python-dotenv>=1.0.0,<2",
    "cryptography>=44.0.0,<45",
    "requests>=2.32.0,<3",
    "Flask-Login>=0.6.3,<0.7",
    "Flask-Admin>=2.0.2,<3",
    "Flask-WTF>=1.2.1,<2",
    "Flask-Babel>=4.0.0,<5",
    "Flask-Mail>=0.9.1,<0.10",
    "Flask-Limiter>=3.5.0,<4",
    "Flask-Talisman>=1.1.0,<2",
    "Flask-Caching>=2.1.0,<3",
    "Flask-SocketIO>=5.3.6,<6",
    "Flask-Cors>=4.0.0,<5",
    "Flask-Compress>=1.14,<2",
    "bcrypt>=4.2.1,<5",
    "celery>=5.3.4,<6",
    "redis>=5.0.1,<6",
    "apscheduler>=3.10.4,<4",
    "sqlalchemy>=2.0.44,<3",
    "alembic>=1.13.0,<2",
    "gunicorn>=21.2.0,<23",
    "weasyprint>=62.3,<64",
    "reportlab>=4.0.7,<5",
    "openpyxl>=3.1.2,<4",
    "sentry-sdk>=1.40.6,<2",
    "stripe>=8.0.0,<10",
    "captcha>=0.7.1,<0.8",
    "pandas>=2.2.0,<3",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "static*", "templates*", "instance*", "migrations*", "translations*", "scripts*", "docs*"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-flask==1.3.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "coverage==7.11.0",
    "flake8==7.3.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
source = ["."]
omit = [
    "*/__init__.py",
    "*/migrations/*",
    "*/tests/*",
    "*/scripts/*",
    "*/instance/*",
    "wsgi.py",
    "run.py",
]
relative_files = true

[tool.coverage.report]
precision = 1
show_missing = true
fail_under = 70

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Pure logic — no route/HTTP.",
    "integration: Full-stack checks on PostgreSQL.",
    "security: Security-related tests.",
    "slow: Marks tests as slow (deselect with '-m \"not slow\"').",
    "db: Tests that need database access.",
]
addopts = "-v --tb=short --strict-markers"

[tool.flake8]
max-line-length = 160
ignore = "E501, W503, W504"
exclude = ".venv, venv, __pycache__, migrations, scripts, static, data, .github"

[tool.flake8.per-file-ignores]
"run.py" = "E402"
"admin/views.py" = "E501"
"routes/auth.py" = "F401, W293"
"routes/chat_socket.py" = "F401"
"routes/developer.py" = "F401"
"routes/entertainment.py" = "F841"
"routes/gameplay.py" = "F401, W293"
"routes/social.py" = "F401, F841"
